--- a/Airline-Reservation-System/Airline-Reservation-System.csproj
+++ b/Airline-Reservation-System/Airline-Reservation-System.csproj
@@ -9,4 +9,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiveCharts.WinForms" Version="0.9.7.1" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.8.0" />
+  </ItemGroup>
+
 </Project>
