--- a/Airline-Reservation-System/app.config
+++ b/Airline-Reservation-System/app.config
@@ -1,3 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add name="sql" connectionString="Data Source=.\;Initial Catalog=Airline_Reservation_System;Integrated Security=True"/>
+	</connectionStrings>
+	<appSettings>
+		<add key="currentUserId" value=""/>
+	</appSettings>
 </configuration>
