--- a/Airline-Reservation-System/Airline-Reservation-System.csproj
+++ b/Airline-Reservation-System/Airline-Reservation-System.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Krypton.Workspace" Version="70.22.11.312" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.8.0" />
   </ItemGroup>
   <ItemGroup Condition="$(VisualStudioVersion) == '17.0'">
     <Reference Include="Microsoft.Data.Tools.Schema.Sql, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
